DIAC-446 Update code smells